--- a/html/index.html
+++ b/html/index.html
@@ -11,12 +11,12 @@
       ----------------
     </p>
     <pre>
-         __       __     ____                    _    ___ 
-        | _|     |_ |   |  _ \  ___  ___ _ __   / \  |_ _|
-        | |       | |   | | | |/ _ \/ _ \ '_ \ / _ \  | | 
-        | |       | |   | |_| |  __/  __/ |_) / ___ \ | | 
-        | |       | |   |____/ \___|\___| .__/_/   \_\___|
-        |__|     |__|                   |_| 
+    __       __     ____                    _    ___ 
+  | _|     |_ |   |  _ \  ___  ___ _ __   / \  |_ _|
+  | |       | |   | | | |/ _ \/ _ \ '_ \ / _ \  | | 
+  | |       | |   | |_| |  __/  __/ |_) / ___ \ | | 
+  | |       | |   |____/ \___|\___| .__/_/   \_\___|
+  |__|     |__|                   |_| 
 </pre
     >
     <br />
@@ -28,7 +28,7 @@
 
     <p><b>Step 2.</b></p>
 
-    <p>Look over your right shoulder</p>
+    <p>Look over your right shoulder.</p>
 
     <p><b>step 3.</b></p>
 
@@ -38,8 +38,8 @@
     <p><b>Step 4.</b></p>
 
     <p>
-      Stop being ridiculous and looking around aimlessly. Go type the following
-      command in to your computer's terminal already!!
+      Stop being ridiculous and looking around aimlessly. <br />Go type the
+      following command into your computer's terminal program - pronto!!
     </p>
 
     <br />
