add html head metadata and og tags to landing page

--- a/html/index.html
+++ b/html/index.html
@@ -1,6 +1,65 @@
 <!DOCTYPE html>
 <html>
-  <head> </head>
+  <head>
+    <title>Careers at DeepAI | DeepAI</title>
+
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="shortcut icon"
+      href="https://deepai.org/static/images/favicon.ico"
+      type="image/x-icon"
+    />
+    <link
+      rel="icon"
+      href="https://deepai.org/static/images/favicon.ico"
+      type="image/x-icon"
+    />
+
+    <meta
+      name="description"
+      content="Designing and developing an A.I. agent that anyone can teach to perform a task for them"
+    />
+    <meta property="og:url" content="https://deepai.org/" />
+    <meta property="og:site_name" content="DeepAI" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="DeepAI" />
+    <meta
+      property="og:description"
+      content="Designing and developing an A.I. agent that anyone can teach to perform a task for them"
+    />
+    <meta
+      property="og:image"
+      content="https://deepai.org/category-pages/5d985097577a4141b38f41ae31757c74/trending-icon-white.png"
+    />
+
+    <!--  Start Google Analytics Tag -->
+    <script ng-if="userIdReady">
+      (function (i, s, o, g, r, a, m) {
+        i["GoogleAnalyticsObject"] = r;
+        (i[r] =
+          i[r] ||
+          function () {
+            (i[r].q = i[r].q || []).push(arguments);
+          }),
+          (i[r].l = 1 * new Date());
+        (a = s.createElement(o)), (m = s.getElementsByTagName(o)[0]);
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m);
+      })(
+        window,
+        document,
+        "script",
+        "https://www.google-analytics.com/analytics.js",
+        "ga"
+      );
+
+      ga("create", "UA-92627538-2", "auto");
+      ga("send", "pageview");
+    </script>
+    <!--  End Google Analytics Tag -->
+  </head>
   <body>
     <br />
     <br />
