update landing page with job posting links

--- a/html/index.html
+++ b/html/index.html
@@ -97,14 +97,21 @@
     <p><b>Step 4.</b></p>
 
     <p>
-      Stop being ridiculous and looking around aimlessly. <br />Go type the
-      following command into your computer's terminal program - pronto!!
+      Stop being ridiculous and looking around aimlessly. <br />Go check out our
+      job openings - pronto!!
     </p>
 
     <br />
+    <a
+      href="https://gist.github.com/deepai-org/244fb51102fd350837e813d87f64ee05"
+      >Software Engineer - Frontend (San Francisco, CA)</a
+    >
     <br />
     <br />
-    <code>$ ssh careers.deepai.org</code>
+    <a
+      href="https://gist.github.com/deepai-org/bc80bb064fbe1460db8712c1187ee4e0"
+      >Software Engineer - Backend (San Francisco, CA)</a
+    >
     <br />
     <br />
     <br />
