--- a/html/index.html
+++ b/html/index.html
@@ -104,12 +104,14 @@
     <br />
     <a
       href="https://gist.github.com/deepai-org/244fb51102fd350837e813d87f64ee05"
+      target="_blank"
       >Software Engineer - Frontend (San Francisco, CA)</a
     >
     <br />
     <br />
     <a
       href="https://gist.github.com/deepai-org/bc80bb064fbe1460db8712c1187ee4e0"
+      target="_blank"
       >Software Engineer - Backend (San Francisco, CA)</a
     >
     <br />
